@@ -1046,15 +1046,16 @@ convertConstant(int type, ValPtr vr)
 		return MAL_SUCCEED;
 	case TYPE_str:
 	{
-		str w = 0;
+		str w;
 		if (vr->vtype == TYPE_void || ATOMcmp(vr->vtype, ATOMnilptr(vr->vtype), VALptr(vr)) == 0) {
 			vr->vtype = type;
 			vr->val.sval = GDKstrdup(str_nil);
 			vr->len = (int) strlen(vr->val.sval);
 			return MAL_SUCCEED;
 		}
-		ATOMformat(vr->vtype, VALptr(vr), &w);
-		assert(w != NULL);
+		w = ATOMformat(vr->vtype, VALptr(vr));
+		if (w == NULL)
+			throw(SYNTAX, "convertConstant", GDK_EXCEPTION);
 		vr->vtype = TYPE_str;
 		vr->len = (int) strlen(w);
 		vr->val.sval = w;
@@ -1130,10 +1131,10 @@ convertConstant(int type, ValPtr vr)
 		/* if what we're converting from is not a string */
 		if (vr->vtype != TYPE_str) {
 			/* an extern type */
-			str w = NULL;
+			str w;
 
 			/* dump the non-string atom as string in w */
-			if (ATOMformat(vr->vtype, VALptr(vr), &w) < 0 ||
+			if ((w = ATOMformat(vr->vtype, VALptr(vr))) == NULL ||
 				/* and try to parse it from string as the desired type */
 				ATOMfromstr(type, &d, &ll, w) < 0 ||
 				d == NULL) {
